<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Leistungsart"
            style="@style/InputLabel"/>
        <Spinner
            android:id="@+id/spLeistungsart"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             />

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
          
           >
v
            <com.visafm.TextInputAutoCompleteTextView
                android:id="@+id/atvLeistung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:completionThreshold="1"
                android:hint="@string/Leistung"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<Spinner-->
            <!--android:id="@+id/spLeistung"-->
            <!--style="@style/Widget.AppCompat.Spinner.Underlined"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:prompt="@string/Leistung" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
          
           >

<com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBeschreibung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Beschreibung:"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_normal" />
     </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Melder"
            style="@style/InputLabel"/>

        <Spinner
            android:id="@+id/spPerson"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:prompt="@string/Person" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
          
           >

<com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAnzahl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Anzahl"
                android:inputType="numberDecimal|numberSigned"
                android:paddingLeft="@dimen/padding_normal" />
     </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Einheit"
            style="@style/InputLabel"/>

        <Spinner
            android:id="@+id/spEinheit"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:prompt="@string/Einheit"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Material"
            style="@style/InputLabel"/>
        <Spinner
            android:id="@+id/spMaterial"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:prompt="@string/Material"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/status"
            style="@style/InputLabel"/>

        <Spinner
            android:id="@+id/spStatus"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/array_status"
            android:prompt="@string/status" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
          
           >

<com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etKosten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Kosten"
                android:inputType="numberDecimal|numberSigned"
                android:paddingLeft="@dimen/padding_normal" />
     </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
          
           >

<com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etVon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Anfang*"
                android:inputType="textUri"
                android:paddingLeft="@dimen/padding_normal" />


     </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
          
           >

<com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ende*"
                android:inputType="textUri"
                android:paddingLeft="@dimen/padding_normal" />
     </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
          
           >

<com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etZeitaufwand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="Zeitaufwand"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_normal" />
     </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
          
           >

            <Button
                android:id="@+id/btnAddService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/add_service"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
     </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>