<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:padding="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:layout_marginTop="@dimen/margin_normal"
               
                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAuftragNr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Auftragsnummer:"
                    android:inputType="text"
                    android:editable="false"
                    android:focusable="false"
                    android:paddingLeft="@dimen/padding_normal"
                    />
    </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Art des Auftrags:"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                style="@style/InputLabel" />
            <Spinner
                android:id="@+id/spArt"
                android:prompt="@string/typeArt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:layout_marginTop="@dimen/margin_normal"
               
                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInventarNr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Objekt ID:"
                    android:inputType="none"
                    android:focusable="false"
                    android:digits="0123456789.,"
                    android:editable="false"
                    android:paddingLeft="@dimen/padding_normal"
                    />
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_normal"

                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAusführungsfensterStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                        android:hint="Ausführung von:"
                    android:inputType="textUri"
                    android:paddingLeft="@dimen/padding_normal"
                    />
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_normal"

                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAusführungsfensterEnde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ausführung bis:"
                    android:inputType="textUri"
                    android:paddingLeft="@dimen/padding_normal"
                    />
    </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:layout_marginTop="@dimen/margin_normal"
               
                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlantermin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Plantermin:"
                    android:inputType="textUri"
                    android:paddingLeft="@dimen/padding_normal"
                    />
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:layout_marginTop="@dimen/margin_normal"
               
                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFälligkeit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Fälligkeit:"
                    android:inputType="textUri"
                    android:paddingLeft="@dimen/padding_normal"
                    />

    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:layout_marginTop="@dimen/margin_normal"
               
                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBezeichnung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Bezeichnung:"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_normal"
                    />
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:layout_marginTop="@dimen/margin_normal"
               
                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etKurzbeschreibung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Kurzbeschreibung:"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_normal"
                    />
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:layout_marginTop="@dimen/margin_normal"
               
                >
       <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBeschreibung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Beschreibung:"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_normal"
                    />
    </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/spAusführung"
                android:prompt="@string/Ausführung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />
            <Spinner
                android:id="@+id/spPriorität"
                android:prompt="@string/Priorität"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:entries="@array/array_Priorität"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />
            <Spinner
                android:id="@+id/spLeistung"
                android:prompt="@string/Leistung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />
            <Spinner
                android:id="@+id/spFehlerbild"
                android:prompt="@string/Fehlerbild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />
            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Aktualisieren"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>